// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtomCloudinary component should render correctly 1`] = `
<Image
  height={undefined}
  onLayout={[Function]}
  resizeMode={undefined}
  source={
    Object {
      "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad/content-tool/zxsxsghibgai4igoarul",
    }
  }
  style={undefined}
  width={undefined}
/>
`;

exports[`AtomCloudinary component should render correctly with a fillWidth 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Image
    height={undefined}
    onLayout={[Function]}
    onLoad={[Function]}
    resizeMode={undefined}
    source={
      Object {
        "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad/content-tool/zxsxsghibgai4igoarul",
      }
    }
    width={undefined}
  >
    <View
      style={undefined}
    >
      <View />
    </View>
  </Image>
</View>
`;

exports[`AtomCloudinary component should render correctly with a gradient 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Image
    height={undefined}
    onLayout={[Function]}
    onLoad={[Function]}
    resizeMode={undefined}
    source={
      Object {
        "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad/content-tool/zxsxsghibgai4igoarul",
      }
    }
    width={undefined}
  >
    <BannerGradient
      style={undefined}
    >
      <View />
    </BannerGradient>
  </Image>
</View>
`;

exports[`AtomCloudinary component should render correctly with a loadingLogo 1`] = `
<Image
  onLoad={undefined}
  resizeMode="center"
  source={1}
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <View
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <Image
      height={undefined}
      onLayout={[Function]}
      onLoad={[Function]}
      resizeMode={undefined}
      source={
        Object {
          "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad/content-tool/zxsxsghibgai4igoarul",
        }
      }
      width={undefined}
    >
      <View
        style={undefined}
      >
        <View />
      </View>
    </Image>
  </View>
</Image>
`;
